Fixed path engine, allow change directory to virtual paths